--- a/_config.yml
+++ b/_config.yml
@@ -80,7 +80,7 @@ analytics:
 author:
   name             : "Enrico Glerean<br>(PhD D.Tech.)"
   avatar           : "EG_profile.jpg"
-  bio              : "Postdoctoral scientist at University of Turku. Data manager at Aalto University. Neuroscience, networks, quantified behaviour, signal processing, web technologies, open data, social cognition, emotions."
+  bio              : "Postdoctoral scientist at Aalto University, Helsinki Institute of Information Technology. Data agent/data manager at Aalto University. Neuroscience, networks, quantified behaviour, signal processing, web technologies, open data, social cognition, emotions."
   location         : "Finland"
   employer         : 
   googlescholar    : "https://scholar.google.fi/citations?user=sD90SmMAAAAJ&hl=en"
