changing email to aalto

--- a/_config.yml
+++ b/_config.yml
@@ -84,7 +84,7 @@ author:
   location         : "Finland"
   employer         : 
   googlescholar    : "https://scholar.google.fi/citations?user=sD90SmMAAAAJ&hl=en"
-  email            : "enrico.glerean@utu.fi"
+  email            : "enrico.glerean@aalto.fi"
   uri              : "https://eglerean.wordpress.com/"
   bitbucket        :
   codepen          :
