--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ locale                   : "en-US"
 title                    : "Enrico Glerean (D.Sc.)"
 title_separator          : "-"
 name                     : &name "Enrico Glerean"
-description              : &description "Brain, Networks, Behaviour"
+description              : &description "Brain, Networks, Behaviour, Open Science, Research Ethics, data management, HPC"
 url                      : https://eglerean.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "eglerean/eglerean.github.io"
@@ -80,7 +80,7 @@ analytics:
 author:
   name             : "Enrico Glerean<br>(D.Sc.)"
   avatar           : "EG_profile.jpg"
-  bio              : "Staff scientist at Aalto University. Data agent, handling human data, research ethics, HPC, best practices in science, neuroscience, networks, quantified behaviour, signal processing, web technologies, open data, social cognition, emotions."
+  bio              : "Staff scientist at Aalto University School of Science. Data agent, handling human data, research ethics, HPC, best practices in science, neuroscience, networks, quantified behaviour, signal processing, web technologies, open data, social cognition, emotions."
   location         : "Finland"
   employer         : 
   googlescholar    : "https://scholar.google.fi/citations?user=sD90SmMAAAAJ&hl=en"
